--- a/client/src/app/components/contact-us/contact-us.component.html
+++ b/client/src/app/components/contact-us/contact-us.component.html
@@ -1,9 +1,9 @@
 <div class="container pb-4">
     <div class="card">
         <div class="card-header bg-primary">
-            <div class="card-title">
+            <span class="card-title">
                 Contact Us
-            </div>
+            </span>
         </div>
         <div class="card-body bg-light">
             <form #contactForm="ngForm" (ngSubmit)="submitContactRequest()" novalidate>
