--- a/client/src/app/components/contact-us/contact-us.component.html
+++ b/client/src/app/components/contact-us/contact-us.component.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-right">
+                <div class="form-group text-right">
                     <input type="submit" class="btn btn-primary" [disabled]="contactForm.invalid">
                 </div>
             </form>
