--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" routerLink="about" routerLinkActive="active">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">Login</a>
+                <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
             </li>
         </ul>
     </div>
