--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,1 +1,96 @@
-<p>home works!</p>
+<div class="container-fluid">
+    <div id="highlights" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li class="active" data-target="#highlights" data-slide-to="0" aria-current="location"></li>
+            <li data-target="#highlights" data-slide-to="1"></li>
+            <li data-target="#highlights" data-slide-to="2"></li>
+            <li data-target="#highlights" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="https://via.placeholder.com/1080x200?text=1080x200+Full+Banner" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://via.placeholder.com/1080x200?text=1080x200+Full+Banner" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://via.placeholder.com/1080x200?text=1080x200+Full+Banner" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://via.placeholder.com/1080x200?text=1080x200+Full+Banner" alt="">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#highlights" data-slide="prev" role="button">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#highlights" data-slide="next" role="button">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="row">
+        <div class="col-md-3 border-right bg-light pl-5">
+            <form>
+                <div class="form-group">
+                    <label class="filter-name">For</label>
+                    <div class="form-ckeck mx-5">
+                        <input type="radio" id="men" class="form-check-input" value="men" name="for" (change)="applyFilter()">
+                        <label class="form-check-label" for="men">Men</label>
+                    </div>
+                    <div class="form-ckeck mx-5">
+                        <input type="radio" id="women" class="form-check-input" value="women" name="for" (change)="applyFilter()">
+                        <label class="form-check-label" for="women">Women</label>
+                    </div>
+                    <div class="form-ckeck mx-5">
+                        <input type="radio" id="kids" class="form-check-input" value="kids" name="for" (change)="applyFilter()">
+                        <label class="form-check-label" for="kids">Kids</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="filter-name">Category</label>
+                    <div class="form-ckeck mx-5">
+                        <input type="radio" id="topwear" class="form-check-input" value="topwear" name="category" (change)="applyFilter()">
+                        <label class="form-check-label" for="topwear">Topwear</label>
+                    </div>
+                    <div class="form-ckeck mx-5">
+                        <input type="radio" id="bottomwear" class="form-check-input" value="bottomwear" name="category" (change)="applyFilter()">
+                        <label class="form-check-label" for="bottomwear">Bottomwear</label>
+                    </div>
+                    <div class="form-ckeck mx-5">
+                        <input type="radio" id="footwear" class="form-check-input" value="footwear" name="category" (change)="applyFilter()">
+                        <label class="form-check-label" for="footwear">Footware</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="filter-name">Price Range</label>
+                    <div class="d-flex justify-content-around">
+                        <input type="number" min="0" class="form-control w-25 d-inline-block" placeholder="Min" (change)="applyFilter()">
+                        <input type="number" min="0" class="form-control w-25 d-inline-block" placeholder="Max" (change)="applyFilter()">
+                    </div>
+                </div>
+            </form>
+        </div>  
+        <div class="col-md-9 border-left">
+            <div class="card-deck mx-auto">
+                <div class="col-md-4 py-3" *ngFor="let product of products">
+                    <a href="javascript:void(0)">
+                        <div class="card">
+                            <div class="card-body p-0 text-center bg-secondary">
+                                <img class="img-fluid" src="https://via.placeholder.com/300x300?text=300x300+Product" alt="">
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-title">
+                                    <h4>Product</h4>
+                                </div>
+                                <div class="card-text">
+                                    {{1000 | currency:"INR"}}
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
