--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -72,7 +72,7 @@
                                     formControlName="password" autocomplete="off">
                                 <div *ngIf="registerForm.get('password').errors?.required && registerForm.get('password').touched"
                                     class="text-danger small">
-                                    *Passwords is Required
+                                    *Password is Required
                                 </div>
                                 <div *ngIf="registerForm.get('password').errors?.minlength && registerForm.get('password').touched"
                                     class="text-danger small">
@@ -89,10 +89,10 @@
                                 <input id="re-password" class="form-control" type="password"
                                     name="re-password" formControlName="rePassword" autocomplete="off">
                                 <div *ngIf="registerForm.get('rePassword').errors?.required && registerForm.get('rePassword').touched" class="text-danger small">
-                                    *Passwords is required
+                                    *Password is required
                                 </div>
                                 <div *ngIf="registerForm.errors?.matchPassword && registerForm.get('rePassword').touched" class="text-danger small">
-                                    *Passwords do not match
+                                    *Password do not match
                                 </div>
                             </div>
                             <div class="form-group text-right">
