--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -5,9 +5,11 @@
     </button>
     <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link">Cart</a>
-            </li>
+            <div *ngIf="userSerVice.getLogInStatus()">
+                <li class="nav-item">
+                    <a class="nav-link">Cart</a>
+                </li>
+            </div>
             <li class="nav-item">
                 <a class="nav-link" routerLink="contact" routerLinkActive="active">Contact Us</a>
             </li>
@@ -15,7 +17,17 @@
                 <a class="nav-link" routerLink="about" routerLinkActive="active">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
+                <div *ngIf="!userSerVice.getLogInStatus();else hello">
+                    <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
+                </div>
+                <ng-template #hello>
+                    <div class="dropdown">
+                        <a id="logout" class="nav-link" data-toggle="dropdown">Hello {{userSerVice.getName()}}</a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="logout">
+                            <a class="dropdown-item" (click)="logoutBtnClickEventHandler();">Log Out</a>
+                        </div>
+                    </div>
+                </ng-template>
             </li>
         </ul>
     </div>
