integrated product listing with database

--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -5,3 +5,9 @@ a{
     font-size: 20px;
     font-weight: 500;
 }
+.card-title, .card-text{
+    color: black
+}
+.card:hover{
+    box-shadow: dimgrey 0px 0px 20px !important;
+}
