--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<div class="p-5"></div>
+<div class="p-4 m-1"></div>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
