--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,23 +1,38 @@
 <div class="container-fluid">
     <div id="highlights" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li class="active" data-target="#highlights" data-slide-to="0" aria-current="location"></li>
-            <li data-target="#highlights" data-slide-to="1"></li>
-            <li data-target="#highlights" data-slide-to="2"></li>
-            <li data-target="#highlights" data-slide-to="3"></li>
-        </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="https://via.placeholder.com/1080x200?text=1080x200+Full+Banner" alt="">
+                <img class="d-block" src="./../../../assets/02cfcffac595c832c514d58704cd82ce.jpg" alt="">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/1080x200?text=1080x200+Full+Banner" alt="">
+                <img class="d-block" src="./../../../assets/05_dressline_banner.jpg" alt="">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/1080x200?text=1080x200+Full+Banner" alt="">
+                <img class="d-block" src="./../../../assets/1521123559.boys-category-banner.jpg" alt="">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/1080x200?text=1080x200+Full+Banner" alt="">
+                <img class="d-block" src="./../../../assets/4_banner.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="./../../../assets/4bea52c050bd26b2755448bbd31d4e98.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="./../../../assets/9450edc9e2da48e07031c79b8f725010.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="./../../../assets/banner-2.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="./../../../assets/banner-3.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="./../../../assets/f7b6e547cdaaeabddc0df789c2c65ba8.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="./../../../assets/kids-banner.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="./../../../assets/men-fashion.jpg" alt="">
             </div>
         </div>
         <a class="carousel-control-prev" href="#highlights" data-slide="prev" role="button">
@@ -30,7 +45,7 @@
         </a>
     </div>
     <div class="row">
-        <div class="col-md-3 border-right bg-light pl-5">
+        <div class="col-md-3 border-right bg-light pl-5 py-5">
             <form #filters="ngForm">
                 <div class="form-group">
                     <label class="filter-name">For</label>
@@ -80,7 +95,7 @@
                 <!-- {{filters.value | json}} -->
             </form>
         </div>
-        <div class="col-md-9 border-left">
+        <div class="col-md-9 border-left py-5">
             <div class="row">
                 <div class="card-deck mx-auto">
                     <div class="col-md-4 p-0 d-flex " *ngFor="let product of products">
