--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,15 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" routerLink="home">ShopSpot</a>
-    <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav"
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-            <div *ngIf="userSerVice.getLogInStatus()">
-                <li class="nav-item">
-                    <a class="nav-link">Cart</a>
-                </li>
-            </div>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
+            </li>
+
+            <li class="nav-item" *ngIf="userSerVice.getLogInStatus()">
+                <a class="nav-link">Cart</a>
+            </li>
+            <li class="nav-item" *ngIf="userSerVice.getLogInStatus()">
+                <a class="nav-link">Orders</a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link" routerLink="contact" routerLinkActive="active">Contact Us</a>
             </li>
