--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -100,7 +100,8 @@
                 <div class="card-deck mx-auto">
                     <div class="col-md-4 p-0 d-flex " *ngFor="let product of products">
                         <div class="card p-0 m-2">
-                            <a href="javascript:void(0)" data-toggle="tooltip" title="{{product.title}}">
+                            <a href="javascript:void(0)" data-toggle="tooltip" title="{{product.title}}"
+                                data-toggle="modal" data-target="#product-details" (click)="displayProductDetails(product)">
                                 <div class="card-body p-0 text-center bg-secondary">
                                     <img class="img-fluid" src='{{"http://localhost:3000/products/"+product.thumbnail}}'
                                         alt="">
@@ -114,6 +115,58 @@
                                     </div>
                                 </div>
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div *ngIf="productDetails">
+    <div id="product-details" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div id="product-images" class="carousel slide" data-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" id="thumbnail">
+                                        <img class="d-block w-100" src="{{'http://localhost:3000/products/'+productDetails['thumbnail']}}" alt="{{productDetails.title}}">
+                                    </div>
+                                    <div class="carousel-item" *ngFor="let productImage of productDetails['images']">
+                                        <img class="d-block w-100" src="{{'http://localhost:3000/products/'+productImage}}" alt="{{productDetails.title}}">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#product-images" data-slide="prev" role="button">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#product-images" data-slide="next" role="button">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-7 pr-5">
+                            <h4>{{productDetails['title']}}</h4>
+                            <h5 class="text-right">{{productDetails['price'] | currency:"INR"}}</h5>
+                            <div class="row">
+                                <div class="col-md-6" *ngFor="let spec of productSpecifications">
+                                    <small>{{spec}}</small>
+                                    <h6>{{productDetails['specifications'][spec]}}</h6>
+                                </div>
+                            </div>
+                            <div class="text-right mt-5">
+                                <button class="btn btn-primary" (click)="addToCartBtnClickEventHandler()">Add to Cart</button>
+                            </div>
                         </div>
                     </div>
                 </div>
