--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
             </li>
 
             <li class="nav-item" *ngIf="userSerVice.getLogInStatus()">
-                <a class="nav-link">Cart</a>
+                <a class="nav-link" routerLink="cart" routerLinkActive="active">Cart <span id="items-in-cart">{{cartService.cartItemsCount | limit}}</span></a>
             </li>
             <li class="nav-item" *ngIf="userSerVice.getLogInStatus()">
                 <a class="nav-link">Orders</a>
