--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -29,9 +29,9 @@
                 </div>
                 <ng-template #hello>
                     <div class="dropdown">
-                        <a id="logout" class="nav-link" data-toggle="dropdown">Hello {{userSerVice.getName()}}</a>
+                        <a id="logout" class="nav-link" role="button" data-toggle="dropdown">Hello {{userSerVice.getName()}}</a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="logout">
-                            <a class="dropdown-item" (click)="logoutBtnClickEventHandler();">Log Out</a>
+                            <a class="dropdown-item" role="button" (click)="logoutBtnClickEventHandler();">Log Out</a>
                         </div>
                     </div>
                 </ng-template>
