--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -97,9 +97,9 @@
         </div>
         <div class="col-md-9 border-left py-5">
             <div class="row">
-                <div class="card-deck mx-auto">
-                    <div class="col-md-3 p-0 d-flex " *ngFor="let product of products">
-                        <div class="card p-0 m-2">
+                <div class="card-group mx-auto">
+                    <div class="col-md-3 p-0 d-flex" *ngFor="let product of products">
+                        <div class="card p-0 m-2 bg-light">
                             <a href="javascript:void(0)" data-toggle="tooltip" title="{{product.title}}"
                                 data-toggle="modal" data-target="#product-details"
                                 (click)="displayProductDetails(product)">
@@ -107,9 +107,9 @@
                                     <img class="img-fluid" src='{{"http://localhost:3000/products/"+product.thumbnail}}'
                                         alt="">
                                 </div>
-                                <div class="card-footer d-flex">
+                                <div class="card-footer bg-light">
                                     <div class="card-title">
-                                        <h6>{{product.title |ellipsis:30}}</h6>
+                                        <h6>{{product.title |ellipsis:40}}</h6>
                                     </div>
                                     <div class="card-text">
                                         {{product.price | currency:"INR"}}
