--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pb-4">
+<div class="container-fluid my-4">
     <div class="row">
         <div class="offset-md-4 col-md-4">
             <div class="card">
