--- a/client/src/app/components/about-us/about-us.component.html
+++ b/client/src/app/components/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="container pb-4">
+<div class="container mt-4">
     <div class="card">
         <div class="card-header bg-primary">
             <span class="card-title">
