--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div id="outer">
+<div>
     <app-header></app-header>
     <div class="p-4 m-1"></div>
     <router-outlet></router-outlet>
-    <app-footer id="inner"></app-footer>
+    <app-footer></app-footer>
 </div>
