--- a/client/src/app/components/cart/cart.component.html
+++ b/client/src/app/components/cart/cart.component.html
@@ -12,7 +12,7 @@
                                 <div class="card border-0 mb-4">
                                     <div class="row no-gutters">
                                         <div class="col-md-2">
-                                            <img [src]="'http://localhost:3000/products/'+cartItem['productDetails']['thumbnail']"
+                                            <img [src]="userService.getMyBaseServerUrl()+'products/'+cartItem['productDetails']['thumbnail']"
                                                 class="card-img" alt="">
                                         </div>
                                         <div class="col-md-10">
