--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid bg-dark text-light py-3 px-3">
-    <div class="row">
+<div class="container-fluid bg-dark text-light py-3 px-5">
+    <div class="row no-gutters">
         <div class="col-md-2 col-sm-3">
             <h5 class="heading">About</h5>
             <ul class="list-unstyled">
